Integrate active producer so that client should be able to send message